Changes to initialization - example is visible on load and is hidden with javascript to avoid Flash Of Unstyled Content.

--- a/demos/examples/styles/examples.css
+++ b/demos/examples/styles/examples.css
@@ -694,7 +694,6 @@ a.bigButton
 
 #exampleWrap
 {
-    display:none;
     padding-top: 10px;
 }
 
